[package]
name = "rmg-001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
rand = "0.8"
env_logger = "0.9"
log = "0.4"
pixels = "0.7"
wgpu = "0.11"
winit = "0.25"
winit_input_helper = "0.10"
